@@ -21,26 +21,27 @@ dev2bitmap <- function(file, type="png16m", height = 7, width = 7, res = 72,
                        method = c("postscript", "pdf"), taa = NA, gaa = NA)
 {
     if(missing(file)) stop("'file' is missing with no default")
-    if(!is.character(file) || length(file) != 1 || !nzchar(file))
+    if(!is.character(file) || length(file) != 1L || !nzchar(file))
         stop("'file' must be a non-empty character string")
     method <- match.arg(method)
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     height <- switch(units, "in"=1, "cm"=1/2.54, "mm"=1/25.4, "px"=1/res) * height
     width <- switch(units, "in"=1, "cm"=1/2.54, "mm"=1/25.4, "px"=1/res) * width
+    ## consider using tools::find_gs_cmd() here
     gsexe <- Sys.getenv("R_GSCMD")
     if(is.null(gsexe) || !nzchar(gsexe)) {
         gsexe <- "gs"
         rc <- system(paste(shQuote(gsexe), "-help > /dev/null"))
         if(rc != 0) stop("sorry, 'gs' cannot be found")
     }
-    gshelp <- system(paste(gsexe, "-help"), intern=TRUE)
+    gshelp <- system(paste(gsexe, "-help"), intern = TRUE)
     st <- grep("^Available", gshelp)
     en <- grep("^Search", gshelp)
     if(!length(st) || !length(en))
         warning("unrecognized format of gs -help")
     else {
         gsdevs <- gshelp[(st+1):(en-1)]
-        devs <- c(strsplit(gsdevs, " "), recursive=TRUE)
+        devs <- c(strsplit(gsdevs, " "), recursive = TRUE)
         if(match(type, devs, 0) == 0)
             stop(gettextf("device '%s' is not available\n", type),
                  gettextf("Available devices are %s",
@@ -82,11 +83,12 @@ bitmap <- function(file, type = "png16m", height = 7, width = 7, res = 72,
                    units = "in", pointsize, taa = NA, gaa = NA, ...)
 {
     if(missing(file)) stop("'file' is missing with no default")
-    if(!is.character(file) || length(file) != 1 || !nzchar(file))
+    if(!is.character(file) || length(file) != 1L || !nzchar(file))
         stop("'file' must be a non-empty character string")
     units <- match.arg(units, c("in", "px", "cm", "mm"))
     height <- switch(units, "in"=1, "cm"=1/2.54, "mm"=1/25.4, "px"=1/res) * height
     width <- switch(units, "in"=1, "cm"=1/2.54, "mm"=1/25.4, "px"=1/res) * width
+    ## consider using tools::find_gs_cmd() here
     gsexe <- Sys.getenv("R_GSCMD")
     if(is.null(gsexe) || !nzchar(gsexe)) {
         gsexe <- "gs"
