@@ -22,24 +22,23 @@ useDynLib(tools, .registration = TRUE)
 
 export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "Rd2txt", "Rd2txt_options", "RdTextFilter", "Rd_db", "Rdiff",
-       "Rdindex", "SweaveTeXFilter",
-       "add_datalist", "assertCondition", "assertError",
-       "assertWarning", "bibstyle", "buildVignette",
-       "buildVignettes", "charset_to_Unicode", "checkDocFiles",
-       "checkDocStyle", "checkFF", "checkMD5sums", "checkNEWS",
-       "checkRd", "checkPoFile", "checkPoFiles", "checkRdaFiles",
-       "checkReplaceFuns", "checkS3methods", "checkTnF",
-       "checkVignettes", "codoc", "codocClasses", "codocData",
-       "compactPDF", "delimMatch", "deparseLatex", "dependsOnPkgs",
-       "encoded_text_to_latex", "file_ext", "file_path_as_absolute",
-       "file_path_sans_ext", "findHTMLlinks", "getBibstyle",
-       "getDepList", "getVignetteInfo", "installFoundDepends",
-       "latexToUtf8", "list_files_with_exts", "list_files_with_type",
-       "make_translations_pkg", "md5sum", "package.dependencies",
-       "package_dependencies", "parseLatex", "parse_Rd", "pkgDepends",
-       "pkgVignettes", "pskill", "psnice", "read.00Index", "readNEWS",
-       "resaveRdaFiles", "showNonASCII", "showNonASCIIfile",
-       "startDynamicHelp", "testInstalledBasic",
+       "Rdindex", "SweaveTeXFilter", "add_datalist",
+       "assertCondition", "assertError", "assertWarning", "bibstyle",
+       "buildVignette", "buildVignettes", "charset_to_Unicode",
+       "checkDocFiles", "checkDocStyle", "checkFF", "checkMD5sums",
+       "checkNEWS", "checkRd", "checkPoFile", "checkPoFiles",
+       "checkRdaFiles", "checkReplaceFuns", "checkS3methods",
+       "checkTnF", "checkVignettes", "codoc", "codocClasses",
+       "codocData", "compactPDF", "delimMatch", "deparseLatex",
+       "dependsOnPkgs", "encoded_text_to_latex", "file_ext",
+       "file_path_as_absolute", "file_path_sans_ext", "findHTMLlinks",
+       "find_gs_cmd", "getBibstyle", "getDepList", "getVignetteInfo",
+       "installFoundDepends", "latexToUtf8", "list_files_with_exts",
+       "list_files_with_type", "make_translations_pkg", "md5sum",
+       "package.dependencies", "package_dependencies", "parseLatex",
+       "parse_Rd", "pkgDepends", "pkgVignettes", "pskill", "psnice",
+       "read.00Index", "readNEWS", "resaveRdaFiles", "showNonASCII",
+       "showNonASCIIfile", "startDynamicHelp", "testInstalledBasic",
        "testInstalledPackage", "testInstalledPackages", "texi2dvi",
        "texi2pdf", "toHTML", "toRd", "undoc", "update_pkg_po",
        "vignetteDepends", "vignetteEngine", "write_PACKAGES",
